--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1><a href="index.html">Hrushikesh Dagwar</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>A passionate <span>Engineer</span> </h2>
+      <h2>Crafting Dreams through <span>Engineering Excellence!</span> </h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -78,7 +78,7 @@
 
       <div class="section-title">
         <h2>About</h2>
-        <p>Learn more about me</p>
+        <p>Crafting Dreams</p>
       </div>
 
       <div class="row">
@@ -86,11 +86,17 @@
           <img src="" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Heading</h3>
+          <h3>Who Am I?</h3>
           <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
-          </p>
+            I am not just another engineer; I am the architect of possibilities, the weaver of digital dreams, and a relentless seeker of excellence. Hailing from the vibrant city of Aurangabad, Maharashtra, I bring a dynamic blend of skills, leadership, and creativity to the table.
+            With a passion for continuous learning and growth, I thrive on taking on new challenges and pushing the boundaries of what's possible. I believe in the power of technology to transform ideas into reality, and my mission is to harness this power to create innovative solutions that leave a lasting impact.
+            
+        <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+          <h3>Engineering Excellence!</h3>
+          <p class="fst-italic">
+            My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur, has been an odyssey of knowledge and innovation. Equipped with a Bachelor of Technology in Information Technology, my academic voyage has forged a solid foundation, Through which I've embraced responsibilities, shaping me into a forward-thinking engineer poised for setting the stage for a future filled with boundless creativity and technological marvels.
+                
+          <!-- </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
@@ -99,7 +105,7 @@
                 <li><i class="bi bi-chevron-right"></i> <strong>Mail:</strong> <span>hrushikeshdagwar@gmail.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Aurangabad</span></li>
               </ul>
-            </div>
+            </div> -->
             <!-- <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
@@ -108,18 +114,18 @@
                 <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
               </ul>
             </div> -->
-          </div>
+          <!-- </div>
           <p>
             Enthusiast with a flair for design and a keen interest in public relations, combining technical expertise 
             with creative communication for impactful solutions.
           </p>
         </div>
-      </div>
+      </div> -->
 
     </div><!-- End About Me -->
 
     <!-- ======= Counts ======= -->
-    <div class="counts container">
+    <!-- <div class="counts container">
 
       <div class="row">
 
@@ -157,10 +163,11 @@
 
       </div>
 
-    </div><!-- End Counts -->
+    </div> -->
+    <!-- End Counts -->
 
     <!-- ======= Skills  ======= -->
-    <div class="skills container">
+    <!-- <div class="skills container">
 
       <div class="section-title">
         <h2>Skills</h2>
@@ -220,10 +227,11 @@
 
       </div>
 
-    </div><!-- End Skills -->
+    </div> -->
+    <!-- End Skills -->
 
     <!-- ======= Interests ======= -->
-    <div class="interests container">
+    <!-- <div class="interests container">
 
       <div class="section-title">
         <h2>Interests</h2>
@@ -304,7 +312,8 @@
         </div>
       </div>
 
-    </div><!-- End Interests -->
+    </div> -->
+    <!-- End Interests -->
 
     <!-- ======= Testimonials ======= -->
     <!-- <div class="testimonials container">
