--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 
       <div class="section-title">
         <h2>Resume</h2>
-        <p>Check My Resume</p>
+        <p>The Journey</p>
       </div>
 
       <div class="row">
@@ -440,28 +440,30 @@
             <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
           </div> -->
           <div class="resume-item">
-            <h4>Bachelor of Technology - Information Technology</h4>
+            <h4>Shri Ramdeobaba College of Engineering and Management, Nagpur</h4>
+            <h5>CGPA - 7.5</h5>
             <h5>2020 - 2024</h5>
-            <p><em>Shri Ramdeobaba College of Engineering and Management, Nagpur</em></p>
-            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+            <p><em>Bachelor of Technology - Information Technology</em></p>
+            <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
+          </div>
+          <div class="resume-item">
+            <h4>Springdale Jr.College, Aurangabad</h4>
+            <h5>Percentage - 82.92</h5>
+            <h5>2018 – 2020</h5>
+            <p><em>Intermediate, Maharashtra Board</em></p>
+            <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
+          </div>
+          <div class="resume-item">
+            <h4>St.Xavier’s High School, Aurangabad</h4>
+            <h5>Percentage - 90.80</h5>
+            <h5>2017 – 2018</h5>
+            <p><em>Matriculation, Maharashtra Board</em></p>
+            <!-- <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p> -->
           </div>
 
 
           <h3 class="resume-title">Professional Experience</h3>
-          <div class="resume-item">
-            <h4> Public Relations And Marketing Head </h4>
-            <h5>  Students’ Representative Council </h5>
-            <h5> Oct 2022 – Present</h5>
-            <p><em>RCOEM - Nagpur</em></p>
-            <p>
-            <ul>
-              <li> Mentored 1st year students under mentorship program and led the team of 100+ members.</li>
-              <li>Pratishruti’23: Generated participation of 1,000+ students and 1,50,000/- sponsorship .</li>
-              <li>Functioned as a liaison between college management and students and provided technical support .</li>
-              <!-- <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li> -->
-            </ul>
-            </p>
-          </div>
+          
           <div class="resume-item">
             <h4>Web Design Intern</h4>
             <h5>Tech KBC   </h5>
@@ -476,8 +478,22 @@
             </ul>
             </p>
           </div>
+          <div class="resume-item">
+            <h4> Public Relations And Marketing Head </h4>
+            <h5>  Students’ Representative Council </h5>
+            <h5> Oct 2022 – Present</h5>
+            <p><em>RCOEM - Nagpur</em></p>
+            <p>
+            <ul>
+              <li> Mentored 1st year students under mentorship program and led the team of 100+ members.</li>
+              <li>Pratishruti’23: Generated participation of 1,000+ students and 1,50,000/- sponsorship .</li>
+              <li>Functioned as a liaison between college management and students and provided technical support .</li>
+              <!-- <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li> -->
+            </ul>
+            </p>
+          </div>
 
-          <h3 class="resume-title">Projects</h3>
+          <!-- <h3 class="resume-title">Projects</h3>
           <div class="resume-item">
             <h4>Body Posture Recognition And Fitness Training</h4>
             <h5>ML based models</h5>
@@ -495,6 +511,20 @@
             <h5>Networking</h5>
             <p><em>Shri Ramdeobaba College of Engineering and Management, Nagpur</em></p>
             <p>Designed the topology of the university network using the software Cisco Packet Tracer with the implementation of wireless networking systems.</p>
+          </div> -->
+
+          <h3 class="resume-title">Certification Courses</h3>
+          <div class="resume-item">
+            <h4>AZ-900 Certified</h4>
+            <h5>Microsoft Azure Fundamentals</h5>
+            <!-- <p><em>Shri Ramdeobaba College of Engineering and Management, Nagpur</em></p> -->
+            <p>This foundational certification demonstrates my understanding of Azure's cloud computing principles, security measures, privacy protocols, compliance standards, and pricing models. It also solidifies my proficiency in Azure's core services, such as compute, storage, networking, and databases.</p>
+          </div>
+          <div class="resume-item">
+            <h4>PCAP: Programming Essentials in Python</h4>
+            <h5>OpenEDG Python Institute</h5>
+            <!-- <p><em>Shri Ramdeobaba College of Engineering and Management, Nagpur</em></p> -->
+            <p>I sought guidance to deepen my understanding of computer programming, including essential concepts like variables, control flow, functions, and exceptions. I received assistance in using Python's developer tools, understanding its runtime environment.This guidance enhanced my proficiency in Python.</p>
           </div>
   
         </div>
