--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 
       <div class="section-title">
         <h2>Projects</h2>
-        <p>My Projects</p>
+        <p>The Work</p>
       </div>
 
       <div class="row">
@@ -602,7 +602,7 @@
 
       <div class="section-title">
         <h2>Portfolio</h2>
-        <p>My Works</p>
+        <p>The Gallery</p>
       </div>
 
       <div class="row">
