--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="" class="img-fluid" alt="">
+          <img src="assets/img/me1.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Who Am I?</h3>
@@ -91,7 +91,7 @@
             I am not just another engineer; I am the architect of possibilities, the weaver of digital dreams, and a relentless seeker of excellence. Hailing from the vibrant city of Aurangabad, Maharashtra, I bring a dynamic blend of skills, leadership, and creativity to the table.
             With a passion for continuous learning and growth, I thrive on taking on new challenges and pushing the boundaries of what's possible. I believe in the power of technology to transform ideas into reality, and my mission is to harness this power to create innovative solutions that leave a lasting impact.
             
-        <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+        <!-- <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left"> -->
           <h3>Engineering Excellence!</h3>
           <p class="fst-italic">
             My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur, has been an odyssey of knowledge and innovation. Equipped with a Bachelor of Technology in Information Technology, my academic voyage has forged a solid foundation, Through which I've embraced responsibilities, shaping me into a forward-thinking engineer poised for setting the stage for a future filled with boundless creativity and technological marvels.
