--- a/index.html
+++ b/index.html
@@ -95,8 +95,11 @@
           <h3>Engineering Excellence!</h3>
           <p class="fst-italic">
             My journey as a final year student at Shri Ramdeobaba College of Engineering and Management, Nagpur, has been an odyssey of knowledge and innovation. Equipped with a Bachelor of Technology in Information Technology, my academic voyage has forged a solid foundation, Through which I've embraced responsibilities, shaping me into a forward-thinking engineer poised for setting the stage for a future filled with boundless creativity and technological marvels.
-                
-          <!-- </p>
+            
+            <h3>Vision for Tomorrow</h3>
+          <p class="fst-italic">
+            In my quest, I foresee a future in which technology is more than just a tool, but also a catalyst for positive change. I am dedicated to pushing the boundaries of innovation by developing solutions that redefine possibilities and help form a brighter, more connected world. Let us begin on a journey of invention together, leaving a lasting legacy in the ever-changing realm of technology.
+            <!-- </p>
           <div class="row">
             <div class="col-lg-6">
               <ul>
