--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="#header">Home</a></li>
-          <li><a class="nav-link active" href="/emp.html">Emp</a></li>
+          <!-- <li><a class="nav-link" href="/emp.html">Emp</a></li> -->
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#resume">Resume</a></li>
           <li><a class="nav-link" href="#services">Projects</a></li>
