--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
         </div> -->
       </div>
       <!-- Old PHP form -->
-      <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4"> -->
+      <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
         <div class="row">
           <div class="col-md-6 form-group">
             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -852,7 +852,7 @@
           <div class="sent-message">Your message has been sent. Thank you!</div>
         </div>
         <div class="text-center"><button type="submit">Send Message</button></div>
-      <!-- </form> -->
+      </form> -->
 
       <!-- New email.js form -->
       <form id="contact-form">
