added service id

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <script type="text/javascript">
         (function() {
             // https://dashboard.emailjs.com/admin/account
-            emailjs.init('hwkFY5K68GoEf6mUm');
+            emailjs.init('service_wd4loq5');
         })();
     </script>
     <script type="text/javascript">
