Updated template id

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 // generate a five digit number for the contact_number variable
                 this.contact_number.value = Math.random() * 100000 | 0;
                 // these IDs from the previous steps
-                emailjs.sendForm('service_wd4loq5', 'contact_form', this)
+                emailjs.sendForm('service_wd4loq5', 'template_bgbg347', this)
                     .then(function() {
                         console.log('SUCCESS!');
                     }, function(error) {
