--- a/index.html
+++ b/index.html
@@ -831,13 +831,14 @@
         </div> -->
       </div>
       <!-- Old PHP form -->
-      <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form mt-4">
+      <form id="contact-form" class="php-email-form mt-4">
+        <input type="hidden" name="contact_number">
         <div class="row">
           <div class="col-md-6 form-group">
-            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+            <input type="text" name="user_name" class="form-control" id="name" placeholder="Your Name" required>
           </div>
           <div class="col-md-6 form-group mt-3 mt-md-0">
-            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+            <input type="email" class="form-control" name="user_email" id="email" placeholder="Your Email" required>
           </div>
         </div>
         <div class="form-group mt-3">
@@ -851,20 +852,8 @@
           <div class="error-message"></div>
           <div class="sent-message">Your message has been sent. Thank you!</div>
         </div>
-        <div class="text-center"><button type="submit">Send Message</button></div>
-      </form> -->
-
-      <!-- New email.js form -->
-      <form id="contact-form">
-        <input type="hidden" name="contact_number">
-        <label>Name</label>
-        <input type="text" name="user_name">
-        <label>Email</label>
-        <input type="email" name="user_email">
-        <label>Message</label>
-        <textarea name="message"></textarea>
-        <input type="submit" value="Send">
-    </form>
+        <input class="text-center" type="submit" value="Send">
+      </form>
 
     </div>
   </section><!-- End Contact Section -->
