--- a/index.html
+++ b/index.html
@@ -848,8 +848,8 @@
           <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
         </div>
         <div class="my-3">
-          <div class="loading">Loading</div>
-          <div class="error-message"></div>
+          <!-- <div class="loading">Loading</div> -->
+          <!-- <div class="error-message"></div> -->
           <div class="sent-message">Your message has been sent. Thank you!</div>
         </div>
         <input class="text-center" type="submit" value="Send">
