--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
+  <!-- Email js code starts here -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script type="text/javascript">
         (function() {
@@ -57,6 +59,7 @@
             });
         }
     </script>
+    <!-- Email js code ends here -->
 </head>
 
 <body>
