--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
         </div> -->
       </div>
       <!-- Old PHP form -->
-      <form id="contact-form" class="php-email-form mt-4">
+      <form id="contact-form" class="mt-4">
         <input type="hidden" name="contact_number">
         <div class="row">
           <div class="col-md-6 form-group">
@@ -851,8 +851,8 @@
           <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
         </div>
         <div class="my-3">
-          <!-- <div class="loading">Loading</div> -->
-          <!-- <div class="error-message"></div> -->
+          <div class="loading">Loading</div>
+          <div class="error-message"></div>
           <div class="sent-message">Your message has been sent. Thank you!</div>
         </div>
         <input class="text-center" type="submit" value="Send">
