--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
         </div> -->
       </div>
       <!-- Old PHP form -->
-      <form id="contact-form" class="mt-4">
+      <form id="contact-form" class="php-email-form mt-4">
         <input type="hidden" name="contact_number">
         <div class="row">
           <div class="col-md-6 form-group">
