--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <ul>
           <li><a class="nav-link active" href="#header">Home</a></li>
           <!-- <li><a class="nav-link" href="/emp.html">Emp</a></li> -->
-          <li><a class="nav-link" href="#about">About</a></li>
+          <li><a class="nav-link" href="about.html">About</a></li>
           <li><a class="nav-link" href="#resume">Resume</a></li>
           <li><a class="nav-link" href="#services">Projects</a></li>
           <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
