--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
         <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a> -->
         <a href="https://www.linkedin.com/in/hrushikesh-dagwar-180b66272" class="linkedin"><i class="bi bi-linkedin"></i></a>
         <a href="https://instagram.com/randomnddumb?igshid=YzU1NGVlODEzOA==" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://dribbble.com/thehrushikesh" class="dribble"><i class="bi bi-dribble"></i></a>
+
 
 
       </div>
