Website project addded

--- a/index.html
+++ b/index.html
@@ -594,8 +594,8 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-tachometer"></i></div>
-            <h4><a href="">University Network</a></h4>
-            <p>Created university network topology using Cisco Packet Tracer, including wireless networking setup.</p>
+            <h4><a href="">Cloud-Powered Portfolio</a></h4>
+            <p>Elevated online presence by constructing portfolio website with a cloud-infused twist. By unifying HTML, CSS, and the might of Azure's cloud.</p>
           </div>
         </div>
 
