--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
           <div class="icon-box">
             <div class="icon"><i class="bx bxl-dribbble"></i></div>
             <h4><a href="">Body Posture Recognition And Fitness Training</a></h4>
-            <p>Formulated a successful method for detecting posture by employing angle heuristics and the MediaPipe framework..</p>
+            <p>Formulated a successful method for detecting posture by employing angle heuristics and the MediaPipe framework.</p>
           </div>
         </div>
 
