--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
       <div class="social-links">
         <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a> -->
         <a href="https://www.linkedin.com/in/hrushikesh-dagwar-180b66272" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://dribbble.com/thehrushikesh" class="dribbble"><i class="bi bi-dribbble"></i></a>
         <a href="https://instagram.com/randomnddumb?igshid=YzU1NGVlODEzOA==" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://dribbble.com/thehrushikesh" class="linkedin"><i class="bi bi-dribbble"></i></a>
 
 
 
@@ -821,6 +821,7 @@
               <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
               <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a> -->
               <a href="https://www.linkedin.com/in/hrushikesh-dagwar-180b66272" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://dribbble.com/thehrushikesh" class="dribbble"><i class="bi bi-dribbble"></i></a>
               <a href="https://instagram.com/randomnddumb?igshid=YzU1NGVlODEzOA==" class="instagram"><i class="bi bi-instagram"></i></a>
 
             </div>
