--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
       </div>
 
       <div class="row">
-        <a href="assets\img\Hrushikesh Dagwar.pdf" download><button class="btn"> </i> Download PDF</a></button></a>
+        <a href="assets\img\Hrushikesh Dagwar.pdf" download><button class="btn"> </i> Download PDF</button></a>
         <!-- <div class="col-lg-6">
           <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
