--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="https://dribbble.com/shots/22737234-PRATISHRUTI-Event-Brochure-2023?utm_source=Clipboard_Shot&utm_campaign=thehrushikesh&utm_content=PRATISHRUTI-%20Event%20Brochure%202023&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=thehrushikesh&utm_content=PRATISHRUTI-%20Event%20Brochure%202023&utm_medium=Social_Share">ProPal Application : UI/UX Case Study</a></h4>
+            <h4><a href="">ProPal Application : UI/UX Case Study</a></h4>
             <p>Crafted an intuitive app prototype via an extensive UI/UX investigation, resulting in heightened user interaction and increased user contentment.</p>
           </div>
         </div>
