--- a/index.html
+++ b/index.html
@@ -597,15 +597,15 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
             <div class="icon"><i class="bx bxl-dribbble"></i></div>
-            <h4><a href="">Body Posture Recognition And Fitness Training</a></h4>
-            <p>Formulated a successful method for detecting posture by employing angle heuristics and the MediaPipe framework.</p>
+            <h4><a href="https://github.com/Hrushi-d/Gym-Exercise-RepTracker">Gym Exercice RepCounter</a></h4>
+            <p>Formulated a successful method for detecting posture by employing angle heuristics and the MediaPipe framework, Mkaing it a top alternative Fitness training for beginners .  .</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="">IP-Tracer Website</a></h4>
+            <h4><a href="https://iptracer.me/">IP-Tracer Website</a></h4>
             <p>Developed and Deployed, user-friendly web application that provides real-time information about your IP address, allowing for quick checks and easy copying to the clipboard.</p>
           </div>
         </div>
