--- a/index.html
+++ b/index.html
@@ -594,7 +594,6 @@
       </div>
 
       <div class="row">
-        <a href="https://iptracer.me/"></a>
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
@@ -604,15 +603,12 @@
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-          <a href="https://iptracer.me/">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4>IP-Tracer Website</h4>
-              <p>Developed and Deployed, user-friendly web application that provides real-time information about your IP address, allowing for quick checks and easy copying to the clipboard.</p>
-            </div>
-          </a>
+          <div class="icon-box">
+            <div class="icon"><i class="bx bxl-dribbble"></i></div>
+            <h4><a href="https://iptracer.me/">IP-Tracer Website</a></h4>
+            <p>Developed and Deployed, user-friendly web application that provides real-time information about your IP address, allowing for quick checks and easy copying to the clipboard.</p>
+          </div>
         </div>
-        
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
