--- a/index.html
+++ b/index.html
@@ -604,6 +604,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
+            <a href="https://iptracer.me/">
             <div class="icon"><i class="bx bxl-dribbble"></i></div>
             <h4><a href="https://iptracer.me/">IP-Tracer Website</a></h4>
             <p>Developed and Deployed, user-friendly web application that provides real-time information about your IP address, allowing for quick checks and easy copying to the clipboard.</p>
