--- a/index.html
+++ b/index.html
@@ -596,6 +596,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
+            <a href="https://github.com/Hrushi-d/Gym-Exercise-RepTracker"></a>
             <div class="icon"><i class="bx bx-file"></i></div>
             <h4><a href="https://github.com/Hrushi-d/Gym-Exercise-RepTracker">Gym Exercice RepCounter</a></h4>
             <p>Formulated a successful method for detecting posture by employing angle heuristics and the MediaPipe framework, Mkaing it a top alternative Fitness training for beginners .  .</p>
@@ -613,6 +614,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
+            <a href=""></a>
             <div class="icon"><i class="bx bx-tachometer"></i></div>
             <h4><a href="">Cloud-Powered Portfolio</a></h4>
             <p>Elevated online presence by constructing portfolio website with a cloud-infused twist. By unifying HTML, CSS, and the might of Azure's cloud.</p>
