--- a/index.html
+++ b/index.html
@@ -594,11 +594,21 @@
       </div>
 
       <div class="row">
-       
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
+          <div class="icon-box">
+            <a href="https://github.com/Hrushi-d/Gym-Exercise-RepTracker">
+              <div class="icon"><a href="https://github.com/Hrushi-d/Gym-Exercise-RepTracker"><i class="bx bx-file"></i></a></div>
+            </a>
+            <h4><a href="https://github.com/Hrushi-d/Gym-Exercise-RepTracker">Gym Exercise RepCounter</a></h4>
+            <p>Formulated a successful method for detecting posture by employing angle heuristics and the MediaPipe framework, making it a top alternative fitness training for beginners.</p>
+          </div>
+        </div>
+        
+
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <a href="https://github.com/Hrushi-d/Gym-Exercise-RepTracker">
-            <div class="icon"><i class="bx bxl-dribbble"></i></div>
+            <div class="icon"><i class="bx bx-file"></i></div>
             <h4><a href="https://github.com/Hrushi-d/Gym-Exercise-RepTracker">Gym Exercise RepCounter</a></h4>
             <p>Formulated a successful method for detecting posture by employing angle heuristics and the MediaPipe framework, making it a top alternative fitness training for beginners.</p>
           </div>
