--- a/index.html
+++ b/index.html
@@ -594,13 +594,13 @@
       </div>
 
       <div class="row">
-        
+
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
             <a href="https://github.com/Hrushi-d/Gym-Exercise-RepTracker">
             <div class="icon"><i class="bx bx-file"></i></div>
             <h4><a href="https://github.com/Hrushi-d/Gym-Exercise-RepTracker">Gym Exercise RepCounter</a></h4>
-            <p>Formulated a successful method for detecting posture by employing angle heuristics and the MediaPipe framework, making it a top alternative fitness training for beginners.</p>
+            <p>Formulated a successful method for detecting posture by employing angle heuristics and the MediaPipe framework, Making it a top alternative fitness training for beginners at there ease.</p>
           </div>
         </div>
 
@@ -609,7 +609,7 @@
             <a href="https://iptracer.me/">
             <div class="icon"><i class="bx bxl-dribbble"></i></div>
             <h4><a href="https://iptracer.me/">IP-Tracer Website</a></h4>
-            <p>Developed and Deployed, user-friendly web application that provides real-time information about your IP address, allowing for quick checks and easy copying to the clipboard.</p>
+            <p>Developed and Deployed, user-friendly web application that provides real-time information about your current IP address, Allowing for quick checks and easy copying to the clipboard.</p>
           </div>
         </div>
 
