--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
             <a href="https://github.com/Hrushi-d/Gym-Exercise-RepTracker">
             <div class="icon"><i class="bx bx-file"></i></div>
             <h4><a href="https://github.com/Hrushi-d/Gym-Exercise-RepTracker">Gym Exercise RepCounter</a></h4>
-            <p>Formulated a successful method for detecting posture by employing angle heuristics and the MediaPipe framework, Making it a top alternative fitness training for beginners at there ease.</p>
+            <p>Formulated a successful method for detecting posture by employing angle heuristics and the MediaPipe framework, A top alternative fitness training.</p>
           </div>
         </div>
 
@@ -609,7 +609,7 @@
             <a href="https://iptracer.me/">
             <div class="icon"><i class="bx bxl-dribbble"></i></div>
             <h4><a href="https://iptracer.me/">IP-Tracer Website</a></h4>
-            <p>Developed and Deployed, user-friendly web application that provides real-time information about your current IP address, Allowing for quick checks and easy copying to the clipboard.</p>
+            <p>Developed and Deployed, user-friendly web application that provides real-time information about your current IP address, Allowing quick copying to clipboard.</p>
           </div>
         </div>
 
