--- a/index.html
+++ b/index.html
@@ -614,7 +614,16 @@
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+          <div class="icon-box">
+            <a href="https://www.behance.net/gallery/182860117/MEdiate-A-Meditation-App-UIUX-Case-Study"></a>
+            <div class="icon"><i class="bx bx-tachometer"></i></div>
+            <h4><a href="">MEdiate App- UI/UX Case Study</a></h4>
+            <p>Elevated online presence by constructing portfolio website with a cloud-infused twist. By unifying HTML, CSS, and the might of Azure's cloud.</p>
+          </div>
+        </div>
+
+<!--         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <a href=""></a>
             <div class="icon"><i class="bx bx-tachometer"></i></div>
@@ -622,7 +631,7 @@
             <p>Elevated online presence by constructing portfolio website with a cloud-infused twist. By unifying HTML, CSS, and the might of Azure's cloud.</p>
           </div>
         </div>
-
+ -->
         <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-world"></i></div>
