--- a/index.html
+++ b/index.html
@@ -618,8 +618,8 @@
           <div class="icon-box">
             <a href="https://www.behance.net/gallery/182860117/MEdiate-A-Meditation-App-UIUX-Case-Study"></a>
             <div class="icon"><i class="bx bx-tachometer"></i></div>
-            <h4><a href="https://www.behance.net/gallery/182860117/MEdiate-A-Meditation-App-UIUX-Case-Study">MEdiate App UI/UX Case Study</a></h4>
-            <p>Designed an intuitive and engaging user experience for Mediate, featuring personalized meditation, stress tracking, and other useful features.</p>
+            <h4><a href="https://www.behance.net/gallery/182860117/MEdiate-A-Meditation-App-UIUX-Case-Study">MEdiate App Case Study</a></h4>
+            <p>Designed an intuitive UI/UX design for Mediate App, featuring personalized meditation, stress tracking, and other useful features.</p>
           </div>
         </div>
 
