--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
 
          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
-            <a href="https://www.behance.net/gallery/182860117/MEdiate-A-Meditation-App-UIUX-Case-Study"></a>
+            <a href="https://www.behance.net/gallery/182860117/MEdiate-A-Meditation-App-UIUX-Case-Study">
             <div class="icon"><i class="bx bx-tachometer"></i></div>
             <h4><a href="https://www.behance.net/gallery/182860117/MEdiate-A-Meditation-App-UIUX-Case-Study">MEdiate App Case Study</a></h4>
             <p>Designed an intuitive UI/UX design for Mediate App, featuring personalized meditation, stress tracking, and other useful features.</p>
