--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
           <div class="resume-item">
             <h4> Public Relations And Marketing Head </h4>
             <h5>  Students’ Representative Council </h5>
-            <h5> Oct 2022 – Present</h5>
+            <h5> Sep 2022 – Aug 2023 </h5>
             <p><em>RCOEM - Nagpur</em></p>
             <p>
             <ul>
