--- a/index.html
+++ b/index.html
@@ -616,9 +616,9 @@
 
          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
-            <a href="https://www.behance.net/gallery/182860117/MEdiate-A-Meditation-App-UIUX-Case-Study">
+            <a href="https://dribbble.com/shots/22885922-MEdiate-A-Meditation-App-UI-UX-Case-Study?utm_source=Clipboard_Shot&utm_campaign=thehrushikesh&utm_content=MEdiate-%20A%20Meditation%20App%20UI%2FUX%20Case%20Study&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=thehrushikesh&utm_content=MEdiate-%20A%20Meditation%20App%20UI%2FUX%20Case%20Study&utm_medium=Social_Share">
             <div class="icon"><i class="bx bx-tachometer"></i></div>
-            <h4><a href="https://www.behance.net/gallery/182860117/MEdiate-A-Meditation-App-UIUX-Case-Study">MEdiate App Case Study</a></h4>
+            <h4><a href="https://dribbble.com/shots/22885922-MEdiate-A-Meditation-App-UI-UX-Case-Study?utm_source=Clipboard_Shot&utm_campaign=thehrushikesh&utm_content=MEdiate-%20A%20Meditation%20App%20UI%2FUX%20Case%20Study&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=thehrushikesh&utm_content=MEdiate-%20A%20Meditation%20App%20UI%2FUX%20Case%20Study&utm_medium=Social_Share">MEdiate App Case Study</a></h4>
             <p>Designed an intuitive UI/UX design for Mediate App, featuring personalized meditation, stress tracking, and other useful features.</p>
           </div>
         </div>
