--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
       <div class="social-links">
         <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a> -->
         <a href="https://www.linkedin.com/in/hrushikesh-dagwar-180b66272" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/Hrushi-d" class="github"><i class="bi bi-github"></i></a>
         <a href="https://dribbble.com/thehrushikesh" class="dribbble"><i class="bi bi-dribbble"></i></a>
         <a href="https://instagram.com/randomnddumb?igshid=YzU1NGVlODEzOA==" class="instagram"><i class="bi bi-instagram"></i></a>
 
