--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Who Am I?</h3>
           <p class="fst-italic">
-            I am not just another engineer; I am the architect of possibilities, the weaver of digital dreams, and a relentless seeker of excellence. Hailing from the vibrant city of Aurangabad, Maharashtra, I bring a dynamic blend of skills, leadership, and creativity to the table.
+            I am not just another engineer, I am the architect of possibilities, the weaver of digital dreams, and a relentless seeker of excellence. Hailing from the vibrant city of Aurangabad, Maharashtra, I bring a dynamic blend of skills, leadership, and creativity to the table.
             With a passion for continuous learning and growth, I thrive on taking on new challenges and pushing the boundaries of what's possible. I believe in the power of technology to transform ideas into reality, and my mission is to harness this power to create innovative solutions that leave a lasting impact.
             
         <!-- <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left"> -->
@@ -524,10 +524,11 @@
             <p><em>Remote – Aurangabad</em></p>
             <p>
             <ul>
-              <li>Web design and development team member with a focus on creating impactful user interfaces (UI) for multiple websites.</li>
-              <li> Proficient in design tools like Figma, Photoshop, and InDesign to produce visually stunning and intuitive designs.</li>
-              <li>Successfully achieved a 20% increase in user engagement and a 15% decrease in bounce rates through effective design implementation.</li>
-              <li>Collaborated closely with cross-functional teams to deliver cutting-edge design solutions.</li>
+              <li> Web design and development team member with a focus on creating impactful User Experience .</li>
+              <li> Proficient in design tools like Figma, Photoshop to produce visually stunning and intuitive designs.</li>
+              <li> Successfully /achieved effective design implementation Using HTML, CSS.</li>
+              <li> Explored other domains such as MySQL, PHP, JavaScript.</li>
+              <li> Collaborated closely with teams to deliver cutting-edge design solutions.</li>
             </ul>
             </p>
           </div>
@@ -538,9 +539,11 @@
             <p><em>RCOEM - Nagpur</em></p>
             <p>
             <ul>
+              <li> Functioned as a liaison between college management and students.</li>
               <li> Mentored 1st year students under mentorship program and led the team of 100+ members.</li>
-              <li>Pratishruti’23: Generated participation of 1,000+ students and 1,50,000/- sponsorship .</li>
-              <li>Functioned as a liaison between college management and students and provided technical support .</li>
+              <li> Pratishruti’23: Generated participation of 1,000+ students and 1,50,000/- sponsorship .</li>
+              <li> Coordinated with college faculty to plan & execute the Gyanodaya Ceremony for 1,000 students.</li>
+              <li> Managed social media handles and executed impactful campaigns to maximize engagement.</li>
               <!-- <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li> -->
             </ul>
             </p>
