--- a/index.html
+++ b/index.html
@@ -571,17 +571,16 @@
 
           <h3 class="resume-title">Certification Courses</h3>
           <div class="resume-item">
-            <h4>AZ-900 Certified</h4>
-            <h5>Microsoft Azure Fundamentals</h5>
+            <h4>Azure AZ-900</h4>
+            <h5>Microsoft </h5>
             <!-- <p><em>Shri Ramdeobaba College of Engineering and Management, Nagpur</em></p> -->
             <p>This foundational certification demonstrates my understanding of Azure's cloud computing principles, security measures, privacy protocols, compliance standards, and pricing models. It also solidifies my proficiency in Azure's core services, such as compute, storage, networking, and databases.</p>
           </div>
           <div class="resume-item">
-            <h4>PCAP: Programming Essentials in Python</h4>
-            <h5>OpenEDG Python Institute</h5>
+            <h4>AWS Fundamentals</h4>
+            <h5>Coursera</h5>
             <!-- <p><em>Shri Ramdeobaba College of Engineering and Management, Nagpur</em></p> -->
-            <p>I sought guidance to deepen my understanding of computer programming, including essential concepts like variables, control flow, functions, and exceptions. I received assistance in using Python's developer tools, understanding its runtime environment.This guidance enhanced my proficiency in Python.</p>
-          </div>
+            <p>This fundamental certification on Coursera attests to my comprehension of Amazon Web Services (AWS) cloud computing principles. The course covers essential aspects including AWS security measures, privacy protocols, compliance standards, and pricing models. </div>
   
         </div>
       </div>
