--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
 
           <h3 class="resume-title">Certification Courses</h3>
           <div class="resume-item">
-            <h4>Azure AZ-900</h4>
+            <h4>Microsoft Azure AZ-900</h4>
             <h5>Microsoft </h5>
             <!-- <p><em>Shri Ramdeobaba College of Engineering and Management, Nagpur</em></p> -->
             <p>This foundational certification demonstrates my understanding of Azure's cloud computing principles, security measures, privacy protocols, compliance standards, and pricing models. It also solidifies my proficiency in Azure's core services, such as compute, storage, networking, and databases.</p>
@@ -580,7 +580,7 @@
             <h4>AWS Fundamentals</h4>
             <h5>Coursera</h5>
             <!-- <p><em>Shri Ramdeobaba College of Engineering and Management, Nagpur</em></p> -->
-            <p>This fundamental certification on Coursera attests to my comprehension of Amazon Web Services (AWS) cloud computing principles. The course covers essential aspects including AWS security measures, privacy protocols, compliance standards, and pricing models. </div>
+            <p>This fundamental course on Coursera attests to my comprehension of Amazon Web Services (AWS) cloud computing principles. The course covers essential aspects including AWS security measures, privacy protocols, compliance standards, and pricing models. </div>
   
         </div>
       </div>
