--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
         <p>The Journey</p>
       </div>
 
-      <a href="assets\img\Hrushikesh Dagwar.pdf" download><button class="btn"> </i> Download PDF</button></a>
+      <a href="assets\img\Hrushikesh Dagwar CV.pdf" download><button class="btn"> </i> Download PDF</button></a>
       <div class="row">
         <!-- <div class="col-lg-6">
           <h3 class="resume-title">Summary</h3>
