--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <li><a class="nav-link active" href="#header">Home</a></li>
           <!-- <li><a class="nav-link" href="/emp.html">Emp</a></li> -->
           <li><a class="nav-link" href="#about">About</a></li>
-          <li><a class="nav-link" href="https://blog.hrushikeshdagwar.tech">Blog</a></li>
+          <li><a class="nav-link" href="https://hrushikeshdagwar.hashnode.dev/">Blog</a></li>
           <li><a class="nav-link" href="#resume">Resume</a></li>
           <li><a class="nav-link" href="#services">Projects</a></li>
           <!-- <li><a class="nav-link" href="#portfolio">Portfolio</a></li> -->
